added transtion to a tags

--- a/HTMLCSSBASICS/index.html
+++ b/HTMLCSSBASICS/index.html
@@ -60,21 +60,23 @@
 
       <div class="right-column">
           <div class="address-wrapper">
+              <a href="contact.html">
+              124 Fake Street Keller, 
+              Texas 76244
+            </div>
+          </a>
+
+          <div class= "contact-icon">
             <a href="contact.html">
             <i class="fas fa-map-marker-alt"></i>
-            124 Fake Street Keller, Texas 76244
-          </a>
+            </a>
+
           </div>
+        
       </div>
 
     </div>
-  </div>
+  
+   </body>
 
-
-
-
-
-  </body>
-
-
-</html>
+   </html>
