--- a/HTMLCSSBASICS/index.html
+++ b/HTMLCSSBASICS/index.html
@@ -64,7 +64,7 @@
             <div class="address-wrapper">
                 <a href="contact.html">
                     123 Any Street<br>
-                    Scottsdale, AZ, 85251
+                    Keller, TX, 76244
                 </a>
             </div>
 
@@ -118,10 +118,60 @@
         </div>
     </div>
 
-    <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3327.0765176913283!2d-111.9287582843236!3d33.49938628076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b0bbdbed13a73%3A0xfab78c0f014377d8!2sDiego+Pops!5e0!3m2!1sen!2sus!4v1534370311184" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13397.461590001325!2d-97.30390459299089!3d32.914942976443506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdcd2fb6e728c223f!2sMartha&#39;s+Mexican+Cocina*21!5e0!3m2!1sen!2sus!4v1537232051503" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>    
+        </div>
 
-    
+         <div class="footer">
+        <div class="logo-footer">
+            <img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+        </div>
+
+        <div class="footer-phone-hours">
+            <span class="phone">
+                555 555 5555
+            </span>
+
+            <span class="hours">
+                10 am - midnight
+            </span>
+        </div>
+
+        <div class="links-wrapper">
+            <div class="nav-link">
+                <a href="index.html">Home</a>
+            </div>
+
+            <div class="nav-link">
+                <a href="about.html">About</a>
+            </div>
+            
+            <div class="nav-link">
+                <a href="menu.html">Menu</a>
+            </div>
+
+            <div class="nav-link">
+                <a href="contact.html">Contact</a>
+            </div>
+        </div>
+
+        <div class="social-media-icons-wrapper">
+            <a href="#">
+                <i class="fab fa-instagram"></i>
+            </a>
+
+            <a href="#">
+                <i class="fab fa-twitter"></i>
+            </a>
+
+            <a href="#">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+        </div>
+
+        <div class="copyright-wrapper">
+            &copy; 2018 DevCamp &#124; All rights reserved
+        </div>
+    </div>
 </body>
-</html>
+<
