DM change photos from fries to pizza

--- a/HTMLCSSBASICS/index.html
+++ b/HTMLCSSBASICS/index.html
@@ -79,7 +79,7 @@
 
     <div class="hero-section">
         <div class="top-heading">
-            <h1>HTML Styled Fries</h1>
+            <h1>Pizza Palace</h1>
         </div>
 
         <div class="bottom-heading">
