change about photos and logos

--- a/HTMLCSSBASICS/about.html
+++ b/HTMLCSSBASICS/about.html
@@ -67,7 +67,7 @@
         <div class="squares">
             <div class="square">
                 <div class="img-wrapper">
-                    <img src="images/squares/fries-sq-1.jpg" alt="Fries">
+                    <img src="images/squares/pizza2.jpeg" alt="Pizza">
                 </div>
 
                 <div class="square-text-wrapper">
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="img-wrapper">
-                    <img src="images/squares/fries-sq-2.jpg" alt="Fries">
+                    <img src="images/squares/pizza1.jpeg" alt="pizza">
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
 
     <div class="footer">
         <div class="logo-footer">
-            <img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+            <img src="images/logos/pizzalogo.png" alt="Logo">
         </div>
 
         <div class="footer-phone-hours">
