--- a/HTMLCSSBASICS/index.html
+++ b/HTMLCSSBASICS/index.html
@@ -38,7 +38,7 @@
 
         <div class="center-column">
             <div class="banner-image">
-                <img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+                <img src="images/logos/pizzalogo.png" alt="Logo">
             </div>
 
             <div class="links-wrapper">
@@ -119,12 +119,14 @@
     </div>
 
         <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13397.461590001325!2d-97.30390459299089!3d32.914942976443506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdcd2fb6e728c223f!2sMartha&#39;s+Mexican+Cocina*21!5e0!3m2!1sen!2sus!4v1537232051503" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>    
-        </div>
+           
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107154.56279236877!2d-97.29116814907924!3d32.93569091503362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864dd6e03178d70f%3A0xb9151050cbdd73b2!2sKeller%2C+TX!5e0!3m2!1sen!2sus!4v1545017462871" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+         </div>
 
          <div class="footer">
         <div class="logo-footer">
-            <img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+            <img src="images/logos/pizzalogo.png" alt="Logo">
         </div>
 
         <div class="footer-phone-hours">
