update menu page change photos links and descriptions

--- a/HTMLCSSBASICS/menu.html
+++ b/HTMLCSSBASICS/menu.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="skewed-header">
-        <div class="header-bg" style="background-image: url('images/background/menu.jpg');"></div>
+        <div class="header-bg" style="background-image: url('images/squares/pizza1.jpeg');"></div>
 
         <div class="skewed-header-wrapper">
             <div class="skewed-header-content">
@@ -54,12 +54,12 @@
         <div class="squares">
             <div class="square">
                 <div class="img-wrapper">
-                    <img src="images/squares/fries-sq-1.jpg" alt="Fries">
+                    <img src="images/squares/pizza3.jpeg" alt="pizza">
                 </div>
 
                 <div class="square-text-wrapper">
-                    <a href="#spicy" name="spicy" class="anchor-link">
-                        <h1>Spicy</h1>
+                    <a href="#gourmet" name="gourmet" class="anchor-link">
+                        <h1>Gourmet</h1>
                     </a>
 
                     <ul>
@@ -72,8 +72,8 @@
             </div>
             <div class="square">
                 <div class="square-text-wrapper">
-                    <a href="#medium" name="medium" class="anchor-link">
-                        <h1>Medium</h1>
+                    <a href="#Vegetable" name="Scicilian" class="anchor-link">
+                        <h1>Vegetable</h1>
                     </a>
 
                     <ol>
@@ -85,17 +85,17 @@
                 </div>
 
                 <div class="img-wrapper">
-                    <img src="images/squares/fries-sq-2.jpg" alt="Fries">
+                    <img src="images/background/gourmet.jpeg" alt="Pizza">
                 </div>
             </div>
             <div class="square">
                 <div class="img-wrapper">
-                    <img src="images/squares/fries-sq-1.jpg" alt="Fries">
+                    <img src="images/squares/pizza4.jpeg" alt="pizza">
                 </div>
 
                 <div class="square-text-wrapper">
-                    <a href="#mild" name="mild" class="anchor-link">
-                        <h1>Mild</h1>
+                    <a href="#deepdish" name="deepdish" class="anchor-link">
+                        <h1>Deep Dish</h1>
                     </a>
 
                     <ul>
@@ -108,8 +108,8 @@
             </div>
             <div class="square">
                 <div class="square-text-wrapper">
-                    <a href="#noflavor" name="noflavor" class="anchor-link">
-                        <h1>No Flavor</h1>
+                    <a href="#supreme" name="supreme" class="anchor-link">
+                        <h1>Supreme</h1>
                     </a>
 
                     <ul>
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="img-wrapper">
-                    <img src="images/squares/fries-sq-2.jpg" alt="Fries">
+                    <img src="images/squares/pizza1.jpeg" alt="pizza">
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
 
     <div class="footer">
         <div class="logo-footer">
-            <img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+            <img src="images/logos/pizzalogo.png" alt="Logo">
         </div>
 
         <div class="footer-phone-hours">
