update contact page with correct logo and header

--- a/HTMLCSSBASICS/contact.html
+++ b/HTMLCSSBASICS/contact.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="skewed-header">
-        <div class="header-bg" style="background-image: url('images/background/contact.jpg');"></div>
+        <div class="header-bg" style="background-image: url('images/background/gourmet.jpeg');"></div>
 
         <div class="skewed-header-wrapper">
             <div class="skewed-header-content">
@@ -57,7 +57,7 @@
         <div class="contact-grid-wrapper">
             <div class="company-metadata-sidebar-wrapper">
                 <div class="logo">
-                    <img src="images/logos/decamp-fantastic-fries-logo-dark.png" alt="Logo">
+                    <img src="images/logos/pizzalogo.png" alt="Logo">
                 </div>
 
 
@@ -113,7 +113,7 @@
 
     <div class="footer">
         <div class="logo-footer">
-            <img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+            <img src="images/logos/pizzalogo.png" alt="Logo">
         </div>
 
         <div class="footer-phone-hours">
