change lorem ipsum text on menu page

--- a/HTMLCSSBASICS/menu.html
+++ b/HTMLCSSBASICS/menu.html
@@ -63,10 +63,9 @@
                     </a>
 
                     <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                        <li>Cupiditate facilis tempora mollitia, nulla perspiciatis corporis quisquam!</li>
-                        <li>Quis repellat iusto distinctio quas iure eaque aut?</li>
-                        <li>Explicabo in omnis quam aliquid molestias optio cumque?</li>
+                        <li>Delicious lightly sauced grandma style pizza </li>
+                        <li>Topped with delicious cheese and fresh basil.</li>
+                        <li>We're sure you will love it!</li>
                     </ul>
                 </div>
             </div>
@@ -77,10 +76,10 @@
                     </a>
 
                     <ol>
-                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                        <li>Cupiditate facilis tempora mollitia, nulla perspiciatis corporis quisquam!</li>
-                        <li>Quis repellat iusto distinctio quas iure eaque aut?</li>
-                        <li>Explicabo in omnis quam aliquid molestias optio cumque?</li>
+                        <li>Choose from endless veggie combiniations.</li>
+                        <li>Add some veggies to your life</li>
+                        <li>Craving some tomatos and Peppers? We got you.</li>
+                        <li>Mellow out with some mushroom pizza!</li>
                     </ol>
                 </div>
 
